# simplyplural-cli

./: .gitignore  CHANGELOG.md  README.md  api_client.py  cache_manager.py  config.example  config_manager.py  daemon.py  daemon_client.py  install.sh  pyproject.toml  requirements.txt  setup.py  shell_template.sh  sp.py  test-shell-integration.sh  test.py
.github/workflows/: ci.yml  release.yml
src/simplyplural/: __init__.py  api_client.py  cache_manager.py  cli.py  config_manager.py  daemon.py  daemon_client.py  daemon_protocol.py  shell_integration.py
tests/: conftest.py  test_api_client.py  test_cache.py  test_cli.py  test_config.py  test_daemon_state.py  test_protocol.py
